# mathx

./: Cargo.toml  LICENSE  README.md
src/: arithmetic.rs  lib.rs  main.rs  math.rs  plane.rs
src/colors/: color.rs  mod.rs
src/curves/: interpolation_type.rs  mod.rs  tween.rs
src/quaternions/: mod.rs
src/rays/: mod.rs  ray3.rs
src/vectors/: vector2.rs  vector3.rs
